--- a/assets/sass/layout/_page.scss
+++ b/assets/sass/layout/_page.scss
@@ -1,6 +1,6 @@
 .container {
   @include outer-container(1440px);
-  padding: 0 8.75rem;
+  padding: 0 7rem;
 
   @include mq(m) {
     padding: 0 1rem;
