--- a/assets/sass/modules/_global-footer.scss
+++ b/assets/sass/modules/_global-footer.scss
@@ -22,6 +22,7 @@ footer {
   li {
     color: $midorange;
     display: inline;
+    line-height: $line-height;
     margin-right: rem(40);
 
     @include mq(m) {
@@ -32,7 +33,6 @@ footer {
 
     @include mq(t) {
       font-size: rem(24);
-      line-height: $line-height;
     }
   }
 
@@ -41,14 +41,17 @@ footer {
   }
 
   .ts-address {
+    @include span-columns(10);
     color: $white;
     margin-top: rem(60);
   }
 
   .bcorp-logo {
-    position: absolute;
-    right: 8.75rem;
-    top: 11.5rem;
+    margin-top: rem(60);
+    @include span-columns(2);
+    @include omega;
+    text-align: right;
+
 
     @include mq(m) {
       top: 22.7rem;
@@ -72,17 +75,18 @@ footer {
     }
 
     @include mq(t) {
-      margin-top: 3rem;
+      bottom: 3rem;
+      text-align: center;
+      width: 95%;
     }
   }
 
   ul,
   .ts-address,
-  .bcorp-logo,
-  .copyright {
+  .bcorp-logo {
     @include mq(t) {
+      @include span-columns(12);
       text-align: center;
-      position: inherit;
     }
   }
 }
